# cli-rust-book

./: README.md
catr/: Cargo.toml
catr/src/: lib.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
findr/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: lib.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
