[package]
name = "grepr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
sys-info = "0.9.1"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
rand = "0.8.5"
