[package]
name = "headr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.8.5"
